--- a/src/views/Home/index.ejs
+++ b/src/views/Home/index.ejs
@@ -1,11 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1 class="text-blue-400">Home</h1>
-  </body>
-</html>
+<section class="flex flex-col w-full h-full items-start justify-start mt-5">
+  <article
+    class="flex w-full h-full gap-5 flex-wrap justify-center items-start"
+  >
+    <div
+      class="flex justify-around w-1/4 h-32 p-4 border-2 border-sky-300 rounded-md transition-transform transform hover:scale-105 hover:shadow-lg"
+    >
+      <div>
+        <h3 class="font-semibold text-lg">Nombre</h3>
+        <p class="text-sm text-gray-500">Descripcion</p>
+        <br />
+        <div>
+          <button class="bg-green-400 px-4 rounded-md">carrito</button>
+        </div>
+      </div>
+      <div class="flex justify-center items-center mt-3">
+        <img
+          src="https://http2.mlstatic.com/D_NQ_NP_862936-CBT69806891889_062023-O.webp"
+          class="h-14 object-cover"
+          alt="Imagen de producto"
+        />
+      </div>
+    </div>
+  </article>
+</section>
