--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/css/output.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="/css/output.css" rel="stylesheet" />
+    <title>Tienda-Virtual</title>
   </head>
-  <body>
-    <main><%- body %></main>
+  <body class="flex flex-col h-screen">
+    <%- include('Header') %>
+    <main class="flex-1"><%- body %></main>
+    <%- include('footer') %>
   </body>
 </html>
