--- a/src/views/Home/index.ejs
+++ b/src/views/Home/index.ejs
@@ -1,24 +1,47 @@
-<section class="flex flex-col w-full h-full items-start justify-start mt-5">
-  <article
-    class="flex w-full h-full gap-5 flex-wrap justify-center items-start"
-  >
-    <div
-      class="flex justify-around w-1/4 h-32 p-4 border-2 border-sky-300 rounded-md transition-transform transform hover:scale-105 hover:shadow-lg"
-    >
+<section class="flex flex-col w-full h-full items-center justify-center">
+  <!-- quiero covertir esto es un carrucel de 3 imagenes -->
+  <article class="flex items-center justify-center">
+    <div id="Carrucel" class="flex justify-center items-center w-screen h-[75vh]">
+      <img
+        class="bg-center w-[100px] h-[90%] z-10 border-4 border-red-300"
+        src="https://img.lovepik.com/background/20211022/small/lovepik-technological-background-image_402010515.jpg "
+        alt="Descripcion"
+      />
+      <img
+        class="bg-center w-[100px] h-[90%] z-0 border-4 border-green-300"
+        src="https://img.lovepik.com/background/20211022/small/lovepik-technological-background-image_402010515.jpg"
+        alt="Descripcion"
+      />
+      <img
+        class="bg-center w-[400px] h-[90%] z-0 border-4 border-blue-300"
+        src="https://img.lovepik.com/background/20211022/small/lovepik-technological-background-image_402010515.jpg"
+        alt="Descripcion"
+      />
+    </div>
+  </article>
+
+  <!-- article padre -->
+  <article class="flex flex-1 items-start justify-start">
+    <!-- este div es el que guarda las cartas -->
+    <div>
+      <!-- esta es la carta -->
       <div>
-        <h3 class="font-semibold text-lg">Nombre</h3>
-        <p class="text-sm text-gray-500">Descripcion</p>
-        <br />
+        <!-- aqui va la imagen, esta tiene que quedar hasta arriba del todo -->
         <div>
-          <button class="bg-green-400 px-4 rounded-md">carrito</button>
+          <img src="" alt="Descripcion" />
         </div>
-      </div>
-      <div class="flex justify-center items-center mt-3">
-        <img
-          src="https://http2.mlstatic.com/D_NQ_NP_862936-CBT69806891889_062023-O.webp"
-          class="h-14 object-cover"
-          alt="Imagen de producto"
-        />
+        <!-- aqui van los textos y el precio -->
+        <div>
+          <h2>Nombre</h2>
+          <p>Descripcion</p>
+          <!-- aqui va el precio y el boton de compra -->
+          <div>
+            <p>Precio</p>
+            <form action="">
+              <button>Comprar</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </article>
