--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -10,5 +10,6 @@
     <%- include('Header') %>
     <main class="flex-1"><%- body %></main>
     <%- include('footer') %>
+    <script src="/scrips/scrip.js"></script>
   </body>
 </html>
