--- a/src/public/css/output.css
+++ b/src/public/css/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -566,16 +570,20 @@ video {
   inset: 0px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
+.z-50 {
+  z-index: 50;
 }
 
 .ml-5 {
@@ -588,6 +596,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .flex {
@@ -606,6 +618,10 @@ video {
   height: 75vh;
 }
 
+.h-\[90\%\] {
+  height: 90%;
+}
+
 .h-full {
   height: 100%;
 }
@@ -614,16 +630,8 @@ video {
   height: 100vh;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[90\] {
-  height: 90;
-}
-
-.h-\[90\%\] {
-  height: 90%;
+.w-\[1200px\] {
+  width: 1200px;
 }
 
 .w-\[200px\] {
@@ -632,42 +640,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[800\] {
-  width: 800;
-}
-
-.w-\[800px\] {
-  width: 800px;
-}
-
-.w-\[1000px\] {
-  width: 1000px;
-}
-
-.w-\[70\] {
-  width: 70;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[1200px\] {
-  width: 1200px;
 }
 
 .flex-1 {
@@ -706,6 +678,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -714,8 +690,21 @@ video {
   border-radius: 0.5rem;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .border-sky-300 {
@@ -723,9 +712,9 @@ video {
   border-color: rgb(125 211 252 / var(--tw-border-opacity, 1));
 }
 
-.bg-slate-700 {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-500 {
@@ -733,73 +722,30 @@ video {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-300 {
+.bg-slate-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-400 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
-}
-
-.bg-sky-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
 
-.bg-\[url\(\'https\:\/\/img\.lovepik\.com\/background\/20211022\/small\/lovepik-technological-background-image_402010515\.jpg\'\)\] {
-  background-image: url('https://img.lovepik.com/background/20211022/small/lovepik-technological-background-image_402010515.jpg');
-}
-
-.bg-\[url\(\'htt\/\/ps\:img\.lovepik\.com\/background\/20211022\/small\/lovepik-technological-background-image_402010515\.jpg\'\)\] {
-  background-image: url('htt//ps:img.lovepik.com/background/20211022/small/lovepik-technological-background-image_402010515.jpg');
-}
-
-.bg-\[url\(\'https\:\/\/i0\.wp\.com\/www\.periodismo\.com\/wp-content\/subid\/Devices\.png\?fit\=1734\%2C1000\&ssl\=1\'\)\] {
-  background-image: url('https://i0.wp.com/www.periodismo.com/wp-content/subid/Devices.png?fit=1734%2C1000&ssl=1');
-}
-
-.bg-\[url\(\'https\:\/\/es\.vecteezy\.com\/png-gratis\/ropa-doblada\'\)\] {
-  background-image: url('https://es.vecteezy.com/png-gratis/ropa-doblada');
-}
-
-.bg-\[url\(\'https\:\/\/nintrend\.com\/noticias\/ropa-zelda-tears-of-the-kingdom-y-uniqlo\/\'\)\] {
-  background-image: url('https://nintrend.com/noticias/ropa-zelda-tears-of-the-kingdom-y-uniqlo/');
-}
-
-.bg-\[url\(\'https\:\/\/es\.alpinestars\.com\/cdn\/shop\/files\/1244-51300-72_f-Occurance-Hoodie\.png\?v\=1721835210\'\)\] {
-  background-image: url('https://es.alpinestars.com/cdn/shop/files/1244-51300-72_f-Occurance-Hoodie.png?v=1721835210');
-}
-
-.bg-\[url\(\'https\:\/\/www\.ikea\.com\.do\/es\/rooms\/cocinas\'\)\] {
-  background-image: url('https://www.ikea.com.do/es/rooms/cocinas');
-}
-
-.bg-\[url\(\'https\:\/\/i\.postimg\.cc\/XNTtXZWZ\/woman-cooking-kitchen\.jpg\'\)\] {
-  background-image: url('https://i.postimg.cc/XNTtXZWZ/woman-cooking-kitchen.jpg');
+.bg-\[url\(\'https\:\/\/i\.postimg\.cc\/CxwPfkQK\/cutting-metal-with-plasma-equipment-plant\.jpg\'\)\] {
+  background-image: url('https://i.postimg.cc/CxwPfkQK/cutting-metal-with-plasma-equipment-plant.jpg');
 }
 
 .bg-\[url\(\'https\:\/\/i\.postimg\.cc\/RFYQsndw\/Tecnologia\.png\'\)\] {
   background-image: url('https://i.postimg.cc/RFYQsndw/Tecnologia.png');
 }
 
-.bg-\[url\(\'https\:\/\/i\.postimg\.cc\/CxwPfkQK\/cutting-metal-with-plasma-equipment-plant\.jpg\'\)\] {
-  background-image: url('https://i.postimg.cc/CxwPfkQK/cutting-metal-with-plasma-equipment-plant.jpg');
+.bg-\[url\(\'https\:\/\/i\.postimg\.cc\/XNTtXZWZ\/woman-cooking-kitchen\.jpg\'\)\] {
+  background-image: url('https://i.postimg.cc/XNTtXZWZ/woman-cooking-kitchen.jpg');
 }
 
 .bg-cover {
@@ -808,6 +754,28 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -819,13 +787,37 @@ video {
   line-height: 2rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
 }
 
 .text-sky-300 {
   --tw-text-opacity: 1;
   color: rgb(125 211 252 / var(--tw-text-opacity, 1));
+}
+
+.text-sky-700 {
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -840,6 +832,12 @@ video {
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -876,26 +874,17 @@ video {
   z-index: 10;
 }
 
-.hover\:flex-1:hover {
-  flex: 1 1 0%;
-}
-
 .hover\:flex-auto:hover {
   flex: 1 1 auto;
 }
 
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:rounded:hover {
-  border-radius: 0.25rem;
-}
-
 .hover\:rounded-lg:hover {
   border-radius: 0.5rem;
+}
+
+.hover\:text-red-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(254 202 202 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-sky-200:hover {
@@ -903,27 +892,20 @@ video {
   color: rgb(186 230 253 / var(--tw-text-opacity, 1));
 }
 
-.hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+.hover\:text-sky-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity, 1));
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:drop-shadow-md:hover {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.hover\:duration-100:hover {
-  transition-duration: 100ms;
-}
-
-.hover\:ease-in:hover {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
-.group:hover .group-hover\:block {
-  display: block;
 }
 
 .group:hover .group-hover\:opacity-100 {
