--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -6,7 +6,7 @@
     <link href="/css/output.css" rel="stylesheet" />
     <title>Tienda-Virtual</title>
   </head>
-  <body class="flex flex-col h-screen">
+  <body class="flex flex-col h-screen gap-10 bg-slate-500">
     <%- include('Header') %>
     <main class="flex-1"><%- body %></main>
     <%- include('footer') %>
