--- a/src/views/layout/Componentes/Carrito.ejs
+++ b/src/views/layout/Componentes/Carrito.ejs
@@ -21,9 +21,9 @@
                   type="number"
                   name="Cantidad"
                   id="Cantidad"
-                  max="20"
+                  max="<%= Carrito.CantuidadMaxima  %>"
                   min="1"
-                  value="<%= Carrito.CantuidadCompra %>"
+                  value="1"
                 />
               </label>
             </div>
