--- a/src/views/layout/Header.ejs
+++ b/src/views/layout/Header.ejs
@@ -1,7 +1,7 @@
 <header class="bg-slate-700 h-16 w-full">
-  <nav class="flex justify-between items-center h-full w-full">
+  <nav class="Navegacion">
     <div class="ml-5">
-      <h1 class="text-2xl text-sky-300">Tienda-Virtual</h1>
+      <h1 class="Titulo">Tienda-Virtual</h1>
     </div>
     <div class="flex justify-end mr-5">
       <ul class="flex gap-5">
