--- a/src/views/layout/footer.ejs
+++ b/src/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-slate-700 h-16 w-full flex justify-center items-center">
+<footer class="bg-slate-700 h-16 w-full flex justify-center items-center p-10">
   <p class="text-center text-sky-300">
     Copyright &copy; 2024 WIlgrey Ravelo Cruz...
   </p>
