Ya Se agrega a carrito
Ya se pueden agregar las coasa al carrito aunque hay un problema un error o una exepcion que no he logrado cachear

--- a/src/views/Home/index.ejs
+++ b/src/views/Home/index.ejs
@@ -72,7 +72,6 @@
           <h2 class="text-lg font-semibold">
             <%= producto.Nombre %> | $<%= producto.Precio %>
           </h2>
-          <p class="text-sm text-gray-600"><%= producto.Descripcion %></p>
         </div>
         <!-- Botones -->
         <div class="mt-auto flex gap-2">
@@ -84,7 +83,7 @@
             >
               Carrito
             </button>
-            <button type="submit" class="btn-red Favorito">Favorito</button>
+            <button type="submit" class="btn-red Favorito">Detalles</button>
           </form>
         </div>
       </div>
