--- a/src/views/layout/Componentes/Carrito.ejs
+++ b/src/views/layout/Componentes/Carrito.ejs
@@ -30,7 +30,7 @@
             <Button
               type="button"
               class="text-red-600 Eliminar"
-              value="<%= Carrito.IdProducto  %>"
+              value="<%= Carrito.IdCarrito %>"
               >X</Button
             >
           </div>
